added cart to Order

--- a/app/scripts/review/templates/review-order.html
+++ b/app/scripts/review/templates/review-order.html
@@ -1,1 +1,7 @@
-<div>Review Order</div>
+<ion-view title="Ingreso de datos">
+
+    <ion-content class="has-header">
+        <review></review>
+    </ion-content>
+
+</ion-view>
