cart is a separate view now

--- a/app/scripts/cart/templates/cart-view.html
+++ b/app/scripts/cart/templates/cart-view.html
@@ -1,7 +1,7 @@
-<ion-view title="Metodo de Entrega">
+<ion-view title="Mi Pedido">
 
     <ion-content class="has-header">
-        <delivery></delivery>
+        <cart></cart>
     </ion-content>
 
 </ion-view>
