--- a/app/templates/nav.html
+++ b/app/templates/nav.html
@@ -33,9 +33,9 @@
   </ion-side-menu>
 
   <!-- Right menu -->
-  <ion-side-menu side="right">
-      <cart></cart>
-  </ion-side-menu>
+  <!--<ion-side-menu side="right">-->
+      <!--<cart></cart>-->
+  <!--</ion-side-menu>-->
   <!-- Right menu -->
 
 </ion-side-menus>
