--- a/app/templates/menu.html
+++ b/app/templates/menu.html
@@ -5,7 +5,7 @@
     </ion-nav-buttons>
 
     <ion-nav-buttons side="right">
-        <button menu-toggle="right" class="button button-clear button-positive">
+        <button class="button button-clear button-positive" data-ng-click="viewCart()">
           Mi Pedido
           <span data-ng-if="cartTotalPrice > 0" >({{ cartTotalPrice  | centsToMoney | currency }})</span>
         </button>
