review order and cleanup

--- a/app/scripts/contact/templates/contact.html
+++ b/app/scripts/contact/templates/contact.html
@@ -96,7 +96,7 @@
         <button class="button button-block button-positive"
                 data-ng-click="continue()"
                 data-ng-disabled="contactDetailsForm.$invalid">
-            Enviar Pedido
+            Continuar
         </button>
 
     </form>
