--- a/app/scripts/review/templates/review-order.html
+++ b/app/scripts/review/templates/review-order.html
@@ -1,4 +1,4 @@
-<ion-view title="Ingreso de datos">
+<ion-view title="Mi Pedido">
 
     <ion-content class="has-header">
         <review></review>
