--- a/app/scripts/promotion/templates/menu-promotions.html
+++ b/app/scripts/promotion/templates/menu-promotions.html
@@ -5,7 +5,7 @@
 
 <ion-list>
     <ion-item bindonce data-ng-repeat="promo in menu" data-ng-click="choose(promo)">
-      <h3 data-bo-bind="promo.desc"></h3>
+      <h3 data-bo-bind="promo.details.description.short"></h3>
       <span data-bo-bind="promo.price | centsToMoney | currency"></span>
     </ion-item>
 </ion-list>
