Refactor - empanadas type

--- a/app/scripts/empanada/templates/menu-empanadas.html
+++ b/app/scripts/empanada/templates/menu-empanadas.html
@@ -3,7 +3,7 @@
 </div>
 
 <div class="item item-divider bar bar-calm" bindonce data-ng-repeat-start="cat in menu">
-    <strong data-bo-bind="cat.desc"></strong>
+    <strong data-bo-bind="cat.description"></strong>
 </div>
 
 <ion-list data-ng-repeat-end>
