--- a/app/scripts/contact/templates/contact.html
+++ b/app/scripts/contact/templates/contact.html
@@ -1,5 +1,7 @@
 <div class="list">
 
+    <facebook-login data-ng-model="contact"></facebook-login>
+
     <form name="contactDetailsForm" novalidate >
 
         <div class="list list-inset">
