--- a/app/scripts/cart/templates/cart.html
+++ b/app/scripts/cart/templates/cart.html
@@ -23,7 +23,7 @@
 
 
   <ion-list show-delete="showDelete">
-    <ion-item nav-clear data-ng-repeat="item in cart.products | orderBy:'+cat'">
+    <ion-item nav-clear data-ng-repeat="item in cart.products track by $index | orderBy:'+cat'">
       <div style="white-space: normal">{{item.cat}} {{item.description()}}</div>
       <div>Cantidad: {{item.qty}}
           <qty ng-model="item" data-ng-show="showEdit" style="font: 0.5em;"></qty>
