--- a/app/scripts/empanada/templates/menu-empanadas.html
+++ b/app/scripts/empanada/templates/menu-empanadas.html
@@ -2,12 +2,12 @@
     Empanadas
 </div>
 
-<div class="item item-divider bar bar-calm" bindonce data-ng-repeat-start="cat in menu">
+<div class="item item-divider bar bar-calm" bindonce data-ng-repeat-start="cat in menu track by $index">
     <strong data-bo-bind="cat.description"></strong>
 </div>
 
 <ion-list data-ng-repeat-end>
-    <ion-item bindonce data-ng-repeat="product in cat.products" data-ng-click="choose(product)">
+    <ion-item bindonce data-ng-repeat="product in cat.products track by $index" data-ng-click="choose(product)">
         <h3 data-bo-bind="product.desc"></h3>
         <span data-bo-bind="product.toppings"></span>
         <span data-bo-bind="product.price.base | centsToMoney | currency"></span>
