--- a/app/scripts/contact/templates/contact.html
+++ b/app/scripts/contact/templates/contact.html
@@ -1,6 +1,7 @@
 <div class="list">
 
     <facebook-login data-ng-model="contact"></facebook-login>
+    <google-login data-ng-model="contact"></google-login>
 
     <form name="contactDetailsForm" novalidate >
 
