--- a/app/scripts/contact/templates/contact.html
+++ b/app/scripts/contact/templates/contact.html
@@ -2,6 +2,7 @@
 
     <facebook-login data-ng-model="contact"></facebook-login>
     <google-login data-ng-model="contact"></google-login>
+    <twitter-login data-ng-model="contact"></twitter-login>
 
     <form name="contactDetailsForm" novalidate >
 
