--- a/app/scripts/empanada/templates/menu-empanadas.html
+++ b/app/scripts/empanada/templates/menu-empanadas.html
@@ -1,15 +1,38 @@
-<div class="item item-divider bar bar-positive " data-bo-if="menu">
+<div class="item item-divider bar bar-positive " data-ng-if="menu">
     Empanadas
 </div>
 
-<div class="item item-divider bar bar-calm" bindonce data-ng-repeat-start="cat in menu track by $index">
+
+<div data-ng-if="!hideDetails">
+
+  <div class="item item-divider bar bar-calm" bindonce data-ng-repeat-start="cat in menu track by $index">
     <strong data-bo-bind="cat.description"></strong>
+  </div>
+
+
+  <ion-list data-ng-repeat-end>
+    <ion-item bindonce data-ng-repeat="product in cat.products track by $index" data-ng-click="choose(product)">
+      <h3 data-bo-bind="product.desc"></h3>
+      <span data-bo-bind="product.toppings"></span>
+      <span data-bo-bind="product.price.base | centsToMoney | currency"></span>
+    </ion-item>
+  </ion-list>
+
 </div>
 
-<ion-list data-ng-repeat-end>
-    <ion-item bindonce data-ng-repeat="product in cat.products track by $index" data-ng-click="choose(product)">
-        <h3 data-bo-bind="product.desc"></h3>
-        <span data-bo-bind="product.toppings"></span>
-        <span data-bo-bind="product.price.base | centsToMoney | currency"></span>
+
+<div data-ng-if="hideDetails">
+
+  <div class="item item-divider bar bar-calm" bindonce data-ng-repeat-start="cat in menu">
+    <strong data-bo-bind="cat.description"></strong>
+  </div>
+
+  <ion-list data-ng-repeat-end>
+    <ion-item bindonce data-ng-repeat="product in cat.products">
+      <h3 data-bo-bind="product.desc"></h3>
+      <qty ng-model="product" style="font: 0.5em;"></qty>
     </ion-item>
-</ion-list>
+  </ion-list>
+
+</div>
+
