PROMOS - Added bindonce directive

--- a/app/scripts/promotion/templates/details.html
+++ b/app/scripts/promotion/templates/details.html
@@ -16,8 +16,8 @@
 
       <div class="item item-body">
 
-        <pizzas data-ng-model="promotion.components.PIZZA" data-nodetails="true"></pizzas>
-        <empanadas data-ng-model="promotion.components.EMPANADA" data-nodetails="true"></empanadas>
+        <pizzas bindonce data-ng-model="promotion.components.PIZZA" data-nodetails="true"></pizzas>
+        <empanadas bindonce data-ng-model="promotion.components.EMPANADA" data-nodetails="true"></empanadas>
 
         <div class="button-bar">
           <a class="button"
