--- a/app/scripts/quantity/templates/qty.html
+++ b/app/scripts/quantity/templates/qty.html
@@ -4,6 +4,6 @@
 <button class="button button-clear button-positive" data-ng-disabled="true">
     {{item.qty}}
 </button>
-<button class="button" data-ng-click="item.updateQty(+1)">
+<button class="button" data-ng-click="item.updateQty(+1)" data-ng-disabled="addButtonDisable">
     <i class="icon ion-plus-round"></i>
 </button>
