--- a/app/scripts/empanada/templates/menu-empanadas.html
+++ b/app/scripts/empanada/templates/menu-empanadas.html
@@ -25,12 +25,13 @@
 
   <div class="item item-divider bar bar-calm" bindonce data-ng-repeat-start="cat in menu">
     <strong data-bo-bind="cat.description"></strong>
+    <span>{{ isPromoValid[cat.ruleId].success }}</span>
   </div>
 
   <ion-list data-ng-repeat-end>
     <ion-item bindonce data-ng-repeat="product in cat.products">
       <h3 data-bo-bind="product.desc"></h3>
-      <qty ng-model="product" style="font: 0.5em;"></qty>
+      <qty ng-model="product" style="font: 0.5em;" data-disableaddbutton="isPromoValid[cat.ruleId].success"></qty>
     </ion-item>
   </ion-list>
 
