BEBIDAS - Adding module

--- a/app/templates/menu.html
+++ b/app/templates/menu.html
@@ -17,6 +17,8 @@
 
       <empanadas bindonce data-ng-model="menu.empanada"></empanadas>
 
+      <bebidas bindonce data-ng-model="menu.bebida"></bebidas>
+
       <promotions bindonce data-ng-model="menu.promo"></promotions>
 
     </ion-content>
