--- a/app/templates/nav.html
+++ b/app/templates/nav.html
@@ -25,6 +25,9 @@
         <ion-item nav-clear menu-close href="#/app/menu/empanada">
           Empanadas
         </ion-item>
+        <ion-item nav-clear menu-close href="#/app/menu/bebida">
+          Bebidas
+        </ion-item>
         <ion-item nav-clear menu-close href="#/app/menu/promo">
           Promociones
         </ion-item>
