BEBIDAS - Added to promos

--- a/app/scripts/promotion/templates/details.html
+++ b/app/scripts/promotion/templates/details.html
@@ -31,6 +31,7 @@
 
         <pizzas bindonce data-ng-model="promotion.components.PIZZA" data-nodetails="true"></pizzas>
         <empanadas bindonce data-ng-model="promotion.components.EMPANADA" data-nodetails="true" validationrules="isPromoValid"></empanadas>
+        <bebidas bindonce data-ng-model="promotion.components.BEBIDA" data-nodetails="true" validationrules="isPromoValid"></bebidas>
 
         <div class="button-bar">
           <a class="button"
