--- a/app/scripts/bebida/templates/menu-bebidas.html
+++ b/app/scripts/bebida/templates/menu-bebidas.html
@@ -28,9 +28,9 @@
   </div>
 
   <ion-list data-ng-repeat-end>
-    <ion-item bindonce data-ng-repeat="product in cat.products">
+    <ion-item bindonce data-ng-repeat="product in cat.products track by $index" data-ng-click="choosePromoItem(product)">
       <h3 data-bo-bind="product.desc"></h3>
-      <qty ng-model="product" style="font: 0.5em;" data-disableaddbutton="isPromoValid[cat.ruleId].success"></qty>
+      <!--<qty ng-model="product" style="font: 0.5em;" data-disableaddbutton="isPromoValid[cat.ruleId].success"></qty>-->
     </ion-item>
   </ion-list>
 
