--- a/app/scripts/bebida/templates/bebida-size.html
+++ b/app/scripts/bebida/templates/bebida-size.html
@@ -1,6 +1,6 @@
 <div class="modal">
     <ion-header-bar>
-        <h1 class="title">Bebida {{bebida.description()}}</h1>
+        <h1 class="title">Bebida {{bebida.getDescription()}}</h1>
     </ion-header-bar>
     <ion-content>
 
