--- a/app/scripts/pizza/templates/pizza-dough.html
+++ b/app/scripts/pizza/templates/pizza-dough.html
@@ -1,6 +1,6 @@
 <div class="modal">
     <ion-header-bar>
-        <h1 class="title">Pizza {{pizza.description()}} </h1>
+        <h1 class="title">Pizza {{pizza.getDescription()}} </h1>
     </ion-header-bar>
     <ion-content>
         <div class="list">
