Fixed empanada description

--- a/app/scripts/empanada/templates/empanada-order.html
+++ b/app/scripts/empanada/templates/empanada-order.html
@@ -7,7 +7,7 @@
         <div class="list card">
           <div class="item item-avatar">
               <img src="">
-              <h2>Empanada {{empanada.desc}}</h2>
+              <h2>Empanada {{empanada.description}}</h2>
               <p>{{empanada.type}}</p>
               <div>{{empanada.totalPrice * empanada.qty | centsToMoney | currency}}</div>
           </div>
