--- a/app/scripts/bebida/templates/menu-bebidas.html
+++ b/app/scripts/bebida/templates/menu-bebidas.html
@@ -12,7 +12,7 @@
 
   <ion-list data-ng-repeat-end>
     <ion-item bindonce data-ng-repeat="product in cat.products track by $index" data-ng-click="choose(product)">
-      <h3 data-bo-bind="product.desc"></h3>
+      <h3 data-bo-bind="product.description"></h3>
       <span data-bo-bind="product.price.base | centsToMoney | currency"></span>
     </ion-item>
   </ion-list>
@@ -29,7 +29,7 @@
 
   <ion-list data-ng-repeat-end>
     <ion-item bindonce data-ng-repeat="product in cat.products track by $index" data-ng-click="choosePromoItem(product)">
-      <h3 data-bo-bind="product.desc"></h3>
+      <h3 data-bo-bind="product.description"></h3>
       <!--<qty ng-model="product" style="font: 0.5em;" data-disableaddbutton="isPromoValid[cat.ruleId].success"></qty>-->
     </ion-item>
   </ion-list>
