Refactor - edit button on cart view if item editable

--- a/app/scripts/cart/templates/cart.html
+++ b/app/scripts/cart/templates/cart.html
@@ -32,7 +32,7 @@
       <button
               class="button button-light"
               data-ng-click="$parent.edit(item)"
-              data-ng-show="showEdit && item.cat != 'EMPANADA' && item.cat != 'PROMO'">
+              data-ng-show="showEdit && item.isEditable()">
         Editar Opciones
       </button>
 
