--- a/app/scripts/bebida/templates/bebida-order.html
+++ b/app/scripts/bebida/templates/bebida-order.html
@@ -24,7 +24,7 @@
                     <a class="button" data-ng-click="order.add(bebida)">Agregar a Mi Pedido</a>
                     <a class="button" data-ng-click="order.edit(bebida)">Modificar</a>
                 </div>
-                <cancel-selection></cancel-selection>
+                <cancel-selection reset-model="bebida"></cancel-selection>
             </div>
         </div>
     </ion-content>
