--- a/app/scripts/bebida/templates/bebida-size.html
+++ b/app/scripts/bebida/templates/bebida-size.html
@@ -29,6 +29,6 @@
             </label>
         </div>
 
-        <cancel-selection></cancel-selection>
+        <cancel-selection reset-model="bebida"></cancel-selection>
     </ion-content>
 </div>
