--- a/app/scripts/empanada/templates/empanada-order.html
+++ b/app/scripts/empanada/templates/empanada-order.html
@@ -26,7 +26,7 @@
                   <a class="button" data-ng-click="order.add(empanada)">Agregar a Mi Pedido</a>
               </div>
 
-              <cancel-selection></cancel-selection>
+              <cancel-selection reset-model="empanada"></cancel-selection>
           </div>
 
         </div>
