--- a/app/scripts/pizza/templates/pizza-dough.html
+++ b/app/scripts/pizza/templates/pizza-dough.html
@@ -19,6 +19,6 @@
                 <i class="radio-icon ion-checkmark"></i>
             </label>
         </div>
-        <cancel-selection></cancel-selection>
+        <cancel-selection reset-model="pizza"></cancel-selection>
     </ion-content>
 </div>
