--- a/app/scripts/pizza/templates/pizza-order.html
+++ b/app/scripts/pizza/templates/pizza-order.html
@@ -24,7 +24,7 @@
                     <a class="button" data-ng-click="order.add(pizza)">Agregar a Mi Pedido</a>
                     <a class="button" data-ng-click="order.edit(pizza)">Modificar</a>
                 </div>
-                <cancel-selection></cancel-selection>
+                <cancel-selection reset-model="pizza"></cancel-selection>
             </div>
         </div>
     </ion-content>
