--- a/app/scripts/pizza/templates/pizza-size.html
+++ b/app/scripts/pizza/templates/pizza-size.html
@@ -52,6 +52,6 @@
             </label>
         </div>
 
-        <cancel-selection></cancel-selection>
+        <cancel-selection reset-model="pizza"></cancel-selection>
     </ion-content>
 </div>
