--- a/app/scripts/bebida/templates/bebida-promo.html
+++ b/app/scripts/bebida/templates/bebida-promo.html
@@ -20,7 +20,7 @@
                     <a class="button" data-ng-click="orderPromo.add(bebida)">Agregar a la Promo</a>
                     <a class="button" data-ng-click="orderPromo.edit(bebida)">Modificar</a>
                 </div>
-                <cancel-selection></cancel-selection>
+                <cancel-selection reset-model="bebida"></cancel-selection>
             </div>
         </div>
     </ion-content>
